# ImGui-Designer

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING_MANIFESTS.md  EXTENSIBILITY.md  NOTES.md  NodeEditor.json  README.md  README_NODES.md  build.sh  commit_message.txt
.dev/markers/: commit_message.txt
.github/instructions/: first.instructions.md  rules.yml
.github/workflows/: validate-manifests.yml
cmake/: CompilerWarnings.cmake  PostBuild.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
cmake/generators/: GenerateImGuiApiInfo.cmake  GenerateStubs.cmake
docs/: ContributingManifests.md  EXTENSIBILITY.md  ModernCppChecklist.md  Nodes.md  Notes.md  README.md
examples/interfaces/: ExampleComponent.hpp  IExampleInterface.hpp  README.md
featuresets/imgui_sdl3_opengl_docking/: FeatureSet.json  README.md
i18n/: de.json  en.json
patches/: imguiNodeEditor.patch
registry/: app_state.json  libraries.example.json  packs.example.json  packs.lock.json  packs.official.json
schemas/: FeatureSet.schema.json  LibraryDescriptor.schema.json  LibraryRegistry.schema.json  PackIndex.schema.json  Package.schema.json  Tutorial.schema.json
scripts/: .env  blocks.yaml  check_enum_value_definitions.py  check_imgui_param_type_coverage.py  extract_imgui_api_information.py  extract_imgui_params.py  extract_parameter_types.py  fetch_packs.py  generate_all.py  generate_blocks_yaml.py  generate_entt_events.py  generate_imgui_block_dirs.py  generate_imgui_block_params.py  generate_imgui_enum_maps.py  generate_node_factory_map.py  generate_node_hpp.py  generate_node_params_map.py  generate_rules_yaml.py  imgui_functions.json  validate_manifests.py  validate_rules_sync.py
scripts/generators/: scan_enums_and_generate_json_converters.py  scan_typedefs_and_collect_values.py
scripts/output/: imgui_functions.json  imgui_structs.json  imgui_typedef_values.json  imgui_typedefs.json  node_factory_map.hpp  parameters.txt
src/: main.cpp
src/app/context/: AppContext.hpp
src/app/ext/: ExtensibilityFwd.hpp  IBlockRenderer.hpp  IFrameHook.hpp  ILayoutEngine.hpp  IPanelRenderer.hpp  IReplaceable.hpp  ITypeAdapter.hpp  RegistryAccess.hpp  ReplaceableRegistry.hpp
src/app/helpers/: AppContext.hpp  app_context.hpp
src/app/packs/: PackIndexLoader.cpp  PackIndexLoader.hpp
src/app/state/: AppStateStore.cpp  AppStateStore.hpp  LayoutStore.cpp  LayoutStore.hpp  ProjectService.cpp  ProjectService.hpp
src/core/components/: EventHandler.hpp  Value.hpp  VisualWindow.hpp  block_graph.cpp  block_graph.hpp  toolbar_panel.cpp  toolbar_panel.hpp  value.hpp  visual_window.cpp  visual_window.hpp
src/core/components/base/: VisualBlock.cpp  VisualBlock.hpp  parametric_visual_block.hpp  visual_block.hpp
src/core/components/blocks/: GenericNode.cpp  GenericNode.hpp
src/core/components/blocks/AlignTextToFramePadding/: align_text_to_frame_padding_params.hpp
src/core/components/blocks/ArrowButton/: arrow_button_params.hpp
src/core/components/blocks/Begin/: begin_params.hpp
src/core/components/blocks/BeginCombo/: begin_combo_node.cpp  begin_combo_node.hpp  (+1 more)
src/core/components/registry/: visual_block_factory.cpp  visual_block_factory.hpp  visual_block_registry.cpp  visual_block_registry.hpp
src/core/events/: Events.hpp
src/core/factories/: Factories.cpp  Factories.hpp  NodeFactory.hpp  factories.cpp  factories.hpp  node_factory.cpp
src/core/helpers/init/: WindowDestruction.hpp  init_imgui_context.hpp  render_imgui_designer_window.hpp  spdlog_dedup.hpp  window_setup.hpp
src/core/helpers/internal/: SystemArchitecture.hpp  system_architecture.hpp
src/core/helpers/preferences/: Preferences.hpp
src/core/helpers/themes/: ThemeLoader.cpp  ThemeLoader.hpp
src/core/types/: Parameter.hpp  flag_option.hpp
src/core/types/base/: ParameterBase.hpp  ParameterParamsBase.hpp  VisibleBase.hpp  parameter_base.hpp
src/core/types/enums/: ImGuiEnumMaps.hpp  ParameterType.hpp  imgui_enum_maps.hpp  visual_block_types.hpp
src/core/types/interfaces/: Drawable.hpp  IDrawable.hpp  IParameter.hpp  IParameterBase.hpp  IParameterParamsBase.hpp  IParamsBase.hpp  IPositionable.hpp  ISaveable.hpp  ISizeable.hpp  IStateable.hpp  IVisible.hpp  component_base.hpp  drawable_base.hpp  imgui_styled_base.hpp  positionable.hpp  positionable_base.hpp  saveable_component.hpp  screen.hpp  screen_base.hpp  selectable.hpp  selectable_base.hpp  serializable.hpp  sizeable.hpp  sizeable_base.hpp  stateable.hpp  stateable_base.hpp  visible.hpp  visible_base.hpp
src/core/types/internal/: SystemArchitecture.hpp
src/core/types/maps/: NodeFactoryMap.hpp  NodeParamsMap.hpp  node_params_map.hpp
src/i18n/: PackTranslationHook.hpp  TranslationManager.cpp  TranslationManager.hpp
src/node/blocks/: GenericNode.cpp  GenericNode.hpp  GenericVisualBlock.hpp
src/node/factories/: Factories.cpp  Factories.hpp  NodeFactory.cpp  NodeFactory.hpp
src/node/graph/: BlockGraph.cpp
src/ui/: ThemeLoader.cpp  ThemeLoader.hpp
src/ui/components/: MainMenuBar.cpp  MainMenuBar.hpp  ToolbarPanel.cpp  ToolbarPanel.hpp  VisualWindow.cpp  VisualWindow.hpp
src/ui/docking/: DockingManager.cpp  DockingManager.hpp
src/ui/panels/: FirstRunModal.cpp  FirstRunModal.hpp  PackManagerPanel.cpp  PackManagerPanel.hpp  PackViewerPanel.cpp  PackViewerPanel.hpp
src/ui/rendering/: InitImGuiContext.hpp  RenderImGuiDesignerWindow.hpp  SpdlogDedup.hpp  WindowDestruction.hpp  WindowSetup.hpp  X11MouseFix.hpp
templates/cmake/: imgui_sdl3_opengl.cmake.in
templates/src/: InitImGuiContext.in.hpp  WindowDestruction.in.hpp  main_quickstart.in.cpp
templates/tutorials/imgui_sdl3/01-setup/: main.in.cpp
tests/: TestHelpers.hpp  test_app_state_store.cpp  test_build_markers.cpp  test_events.cpp  test_generate_rules_yaml_idempotence.cpp  test_generated_node_params_map.cpp  test_generated_node_params_map_golden.cpp  test_layout_store.cpp  test_main.cpp  test_preferences.cpp  test_project_service.cpp  test_rules_sync_script.cpp  test_translation_manager.cpp
tutorials/imgui_sdl3/: Tutorial.json
tutorials/imgui_sdl3/lessons/01-setup/: README.md
(+326 files in other folders)
